syntax = "proto3";

option go_package = "github.com/google/go-tpm-tools/proto";

// Enum values come from TCG Algorithm Registry - v1.27 - Table 3
enum ObjectType {
  OBJECT_INVALID = 0x0000;
  RSA = 0x0001;
  ECC = 0x0023;
}

enum HashAlgo {
  HASH_INVALID = 0x0000;
  SHA1 = 0x0004;
  SHA256 = 0x000B;
}

// SealedBytes stores the result of a TPM2_Seal. The private portion (priv) has
// already been encrypted and is no longer sensitive. The hash algorithm is
// assumed to be SHA256.
message SealedBytes {
  bytes priv = 1;
  bytes pub = 2;
  repeated int32 pcrs = 3;
  HashAlgo hash = 4;
  ObjectType srk = 5;
  Pcrs certified_pcrs = 6;
  bytes creation_data = 7;
  bytes ticket = 8;
}

message ImportBlob {
  bytes duplicate = 1;
  bytes encrypted_seed = 2;
  bytes public_area = 3;
  Pcrs pcrs = 4;
}

message Quote {
  bytes quote = 1;
  bytes raw_sig = 2;
  Pcrs pcrs = 3;
}

message Pcrs {
  HashAlgo hash = 1;
  map<uint32, bytes> pcrs = 2;
}

message Attestation {
  bytes ak_pub = 1;
  repeated Quote quotes = 2;
  bytes event_log = 3;
}

enum GceConfidentialTechnology {
  NONE = 0;
  AMD_SEV = 1;
  AMD_SEV_ES = 2;
}

message PlatformState {
  bytes firmware_version = 1;
  GceConfidentialTechnology technology = 2;
}

message Certificate {
  bytes der = 1;
}

// A Secure Boot database containing lists of hashes and certificates,
// as defined by section 32.4.1 Signature Database in the UEFI spec.
message Database {
  repeated Certificate certs = 1;
  repeated bytes hashes = 2;
}

message SecureBootState {
  bool enabled = 1; 
  Database db = 2;
  Database dbx = 3;
  // Authority events post-separator. Pre-separator authorities
  // are currently not supported.
  Database authority = 4;
}

message Event {
  uint32 index = 1;
  uint32 untrusted_type = 2;
  bytes data = 3;
  bytes digest = 4;
}

message MachineState {
  PlatformState platform = 1;
  SecureBootState secure_boot = 2;
  repeated Event raw_events = 3;
}

message PlatformPolicy {
  repeated bytes allowed_firmware_versions = 1;
  GceConfidentialTechnology minimum_technology = 2;
}

message SecureBootPolicy {
  Database permitted = 1;
  Database forbidden = 2;
  repeated Certificate permitted_authorities = 3;
}

message AttestationPolicy {
  PlatformPolicy platform = 1;
  SecureBootPolicy secure_boot = 2;
}
